# codex-probe

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  codex_probe.py  model_substitution_hard_suite.md  provider_probe.py  pyproject.toml
codex_probe_data/baselines/: official-sub2api-20x-fast-16c16g-gpt-5.5-xhigh.json
examples/: audit-command.sh  baseline-current-codex.sh
tests/: test_http_retry.py  test_scoring.py  test_validators.py
