[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-probe"
version = "0.1.0"
description = "Black-box purity audit CLI for OpenAI-compatible model providers and API gateways."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Codex Probe contributors" }
]
keywords = [
  "openai",
  "llm",
  "api-gateway",
  "model-audit",
  "provider-audit",
  "token-usage",
  "latency",
  "relay-purity"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.scripts]
codex-probe = "provider_probe:main"
provider-probe = "provider_probe:main"

[project.urls]
Homepage = "https://github.com/leiMizzou/codex-probe"
Issues = "https://github.com/leiMizzou/codex-probe/issues"

[tool.setuptools]
py-modules = ["provider_probe", "codex_probe"]

[tool.setuptools.exclude-package-data]
"*" = [
  "reports/*",
  "baselines/*",
  "generated/*",
  "__pycache__/*"
]
